src/test/ui/error-codes/E0225.stderr
error[E0225]: only auto traits can be used as additional traits in a trait object
  --> $DIR/E0225.rs:7:32
   |
LL |     let _: Box<std::io::Read + std::io::Write>;
   |                                ^^^^^^^^^^^^^^ non-auto additional trait

error[E0225]: only auto traits can be used as additional traits in a trait object
  --> $DIR/E0225.rs:9:16
   |
LL | trait Foo = std::io::Read + std::io::Write;
   |                             -------------- non-auto additional trait
LL | trait Bar = Foo;
   |             --- referenced here
...
LL |     let _: Box<Bar>;
   |                ^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0225`.
